--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
     <model-viewer src="https://cdn.glitch.global/5644007f-2958-4399-87a1-091ebf1a8f52/fan.glb?v=1669750942866"
-                  ios-src="hhttps://cdn.glitch.global/5644007f-2958-4399-87a1-091ebf1a8f52/fan.glb?v=1669750942866"
+                  ios-src="https://cdn.glitch.global/5644007f-2958-4399-87a1-091ebf1a8f52/fan.usdz?v=1669753292666"
                   alt="ha ha"
                   shadow-intensity="1"
                   camera-controls
